--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </form>
         </section>
     </main>
-        <footer>
+        <footer class="footer">
         <p>Todos los derechos reservados. Jesús Solís Martínez</p>
         </footer>
 
